Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-28038

CLONE - Attempting to write to a buffer still in use

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 5.1.0
    • 4.6.3
    • forestdb
    • Untriaged
    • Unknown

    Description

      Backup is getting into a situation where the buffer to write to is not marked for reuse. This causes an error.
      [FDB ERR] Write error: trying to write at the offset 1032176 that is not identified as a reusable block in a database file '/opt/couchbase_backups/backup000/repo01/.merge/userstate-4d8a917d4f2259ed677457368b2dfaca/data/shard_0.fdb'

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              arunkumar Arunkumar Senthilnathan (Inactive)
              srinath.duvuru Srinath Duvuru
              Votes:
              0 Vote for this issue
              Watchers:
              11 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty